# package_test

./: LICENSE  README.md  pyproject.toml
src/pyrepo/: __init__.py  algos.py
