# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pyrepo"
description = "Demo packages"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "akira.nomura@unibe.ch", name = "Akira Nom" },
]
dynamic = ["version"]
dependencies = []

[tool.hatch.version]
path = "src/pyrepo/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]

# extra packages only for ppl testing packages
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/AkiraNom/pyrepo"
repository = "https://github.com/AkiraNom/pyrepo"
